<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_script_add"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".ui.activity.ScriptAddActivity">

	<LinearLayout android:id="@+id/ll_main" android:layout_width="match_parent"
	              android:layout_height="wrap_content"
	              android:orientation="vertical">

	    <android.support.design.widget.TextInputLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content">

	        <EditText android:id="@+id/script_title"
	                  android:layout_width="match_parent"
	                  android:layout_height="wrap_content"
	                  style="@style/TextInput"
	                  android:hint="@string/script_title" />

	    </android.support.design.widget.TextInputLayout>

		<LinearLayout android:layout_width="match_parent"
		              android:layout_height="wrap_content"
		              android:orientation="horizontal">

			<android.support.design.widget.TextInputLayout
					android:layout_width="0dp"
					android:layout_weight="1"
					android:layout_height="wrap_content">

				<EditText android:id="@+id/script_author"
				          android:layout_width="match_parent"
				          android:layout_height="wrap_content"
				          style="@style/TextInput"
				          android:hint="@string/script_author" />

			</android.support.design.widget.TextInputLayout>

			<android.support.design.widget.TextInputLayout
					android:layout_width="0dp"
					android:layout_weight="1"
					android:layout_height="wrap_content">

				<EditText android:id="@+id/script_period"
				          android:layout_width="match_parent"
				          android:layout_height="wrap_content"
				          style="@style/TextInput"
				          android:hint="@string/script_period" />

			</android.support.design.widget.TextInputLayout>

		</LinearLayout>

		<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

			<EditText android:id="@+id/script_desc"
			          android:layout_width="match_parent"
			          android:layout_height="wrap_content"
			          style="@style/TextInput"
			          android:hint="@string/script_desc" />

		</android.support.design.widget.TextInputLayout>

	    <android.support.design.widget.TextInputLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content">

	        <EditText android:id="@+id/script_text"
	                  android:layout_width="match_parent"
	                  android:layout_height="wrap_content"
	                  style="@style/TextInput"
	                  android:lines="12"
	                  android:hint="@string/script_text" />

	    </android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

			<EditText android:id="@+id/script_word"
			          android:layout_width="match_parent"
			          android:layout_height="wrap_content"
			          style="@style/TextInput"
			          android:maxLength="4"
			          android:hint="@string/script_word" />

		</android.support.design.widget.TextInputLayout>

	</LinearLayout>

</android.support.v4.widget.NestedScrollView>