<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/item_bg">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

	    <RelativeLayout android:layout_width="match_parent"
	                    android:layout_height="wrap_content"
	                    android:layout_marginBottom="8dp">
		    <LinearLayout
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal">

			    <TextView android:id="@+id/tv_word"
			              android:layout_width="48dp"
			              android:layout_height="48dp"
			              android:layout_gravity="center"
			              android:textColor="@color/colorPrimary"
			              android:gravity="center"
			              android:background="@drawable/word_bg" />

			    <LinearLayout android:layout_width="wrap_content"
			                  android:layout_height="wrap_content"
			                  android:layout_marginStart="8dp"
			                  android:orientation="vertical">
				    <TextView
						    android:id="@+id/tv_title"
						    android:layout_width="wrap_content"
						    android:layout_height="wrap_content"
						    android:textSize="20sp"
						    android:textStyle="bold"
						    android:text="@string/script_title"
						    android:letterSpacing="0.2"
						    android:textColor="@color/colorTitle"/>
				    <TextView
						    android:id="@+id/tv_desc"
						    android:layout_width="wrap_content"
						    android:layout_height="wrap_content"
						    android:text="@string/script_desc"
						    android:layout_marginTop="4dp"
						    android:textSize="14sp"
						    android:textColor="@color/colorVice"/>
			    </LinearLayout>
		    </LinearLayout>

		    <LinearLayout android:layout_width="wrap_content"
		                  android:layout_height="wrap_content"
		                  android:layout_alignParentEnd="true"
		                  android:layout_centerVertical="true"
		                  android:orientation="vertical">
			    <TextView
					    android:id="@+id/tv_author"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:textSize="20sp"
					    android:layout_gravity="end"
					    android:text="@string/script_author"
					    android:textColor="@color/colorText"/>
			    <TextView
					    android:id="@+id/tv_period"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:layout_marginTop="4dp"
					    android:textSize="14sp"
					    android:textColor="@color/colorVice"
					    android:text="@string/script_period"/>
		    </LinearLayout>
	    </RelativeLayout>
	    <TextView
			    android:id="@+id/tv_text"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textSize="16sp"
			    android:lines="2"
			    android:textColor="@color/colorText"/>

    </LinearLayout>

</LinearLayout>